--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,27 +12,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-08 Sat 21:30]
+#+CAPTION: Clock summary at [2017-07-08 Sat 21:36]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *15:23* |       |      | 100.0 |
+| *Total time*                                                                | *15:28* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 15:23   |       |      | 100.0 |
-| Active                                                                      |         | 15:23 |      | 100.0 |
+| Stories                                                                     | 15:28   |       |      | 100.0 |
+| Active                                                                      |         | 15:28 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   5.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.6 |
 | COMPLETED Implement the context class                                       |         |       | 1:12 |   7.8 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  27.2 |
-| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |  10.3 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  27.0 |
+| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |  10.2 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   1.3 |
 | COMPLETED Implement the output languages transform                          |         |       | 0:37 |   4.0 |
 | COMPLETED Use forward declaration for context                               |         |       | 0:20 |   2.2 |
-| COMPLETED Implement the references chain                                    |         |       | 2:43 |  17.7 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |  17.6 |
 | COMPLETED Implement the merge transform                                     |         |       | 0:40 |   4.3 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   1.4 |
 | COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   5.4 |
-| STARTED Implement the post-processing chain                                 |         |       | 1:38 |  10.6 |
+| STARTED Implement the post-processing chain                                 |         |       | 1:43 |  11.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -227,6 +227,7 @@ Tasks:
 - plug it in the model generation chain.
 
 *** STARTED Implement the post-processing chain                       :story:
+    CLOCK: [2017-07-08 Sat 21:31]--[2017-07-08 Sat 21:36] =>  0:05
     CLOCK: [2017-07-08 Sat 21:27]--[2017-07-08 Sat 21:30] =>  0:03
     CLOCK: [2017-07-08 Sat 21:25]--[2017-07-08 Sat 21:26] =>  0:01
     CLOCK: [2017-07-08 Sat 21:18]--[2017-07-08 Sat 21:24] =>  0:06
