--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,27 +12,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-09 Sun 11:00]
+#+CAPTION: Clock summary at [2017-07-09 Sun 11:17]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *16:37* |       |      | 100.0 |
+| *Total time*                                                                | *16:52* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 16:37   |       |      | 100.0 |
-| Active                                                                      |         | 16:37 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   4.8 |
+| Stories                                                                     | 16:52   |       |      | 100.0 |
+| Active                                                                      |         | 16:52 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   4.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.4 |
-| COMPLETED Implement the context class                                       |         |       | 1:12 |   7.2 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  25.2 |
-| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   9.5 |
+| COMPLETED Implement the context class                                       |         |       | 1:12 |   7.1 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  24.8 |
+| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   9.4 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   1.2 |
 | COMPLETED Implement the output languages transform                          |         |       | 0:37 |   3.7 |
 | COMPLETED Use forward declaration for context                               |         |       | 0:20 |   2.0 |
-| COMPLETED Implement the references chain                                    |         |       | 2:43 |  16.3 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |  16.1 |
 | COMPLETED Implement the merge transform                                     |         |       | 0:40 |   4.0 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   1.3 |
-| COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   5.0 |
-| STARTED Implement the post-processing chain                                 |         |       | 2:52 |  17.3 |
+| COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   4.9 |
+| STARTED Implement the post-processing chain                                 |         |       | 3:07 |  18.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -227,6 +227,7 @@ Tasks:
 - plug it in the model generation chain.
 
 *** STARTED Implement the post-processing chain                       :story:
+    CLOCK: [2017-07-09 Sun 11:01]--[2017-07-09 Sun 11:16] =>  0:15
     CLOCK: [2017-07-09 Sun 10:45]--[2017-07-09 Sun 11:00] =>  0:15
     CLOCK: [2017-07-08 Sat 22:58]--[2017-07-08 Sat 23:17] =>  0:19
     CLOCK: [2017-07-08 Sat 22:30]--[2017-07-08 Sat 22:57] =>  0:27
@@ -249,13 +250,19 @@ Tasks:
 - implement all internal transforms required by the post-processing
   chain.
 - implement the external transform chain.
-- fix all errors when we replace the legacy code with the new
-  transform-based code.
 
 Notes:
 
 - for the external chain, we need to generate the decorations
   properties factory within the chain.
+
+*** Replace expanders with transforms                                 :story:
+
+Tasks:
+
+- use the model generated from the transforms instead of the
+  expanders.
+- fix all resulting errors.
 
 *** Implement the mapper as a transform                               :story:
 
