--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,27 +12,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-09 Sun 11:17]
+#+CAPTION: Clock summary at [2017-07-09 Sun 11:41]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *16:52* |       |      | 100.0 |
+| *Total time*                                                                | *17:16* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 16:52   |       |      | 100.0 |
-| Active                                                                      |         | 16:52 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   4.7 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.4 |
-| COMPLETED Implement the context class                                       |         |       | 1:12 |   7.1 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  24.8 |
-| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   9.4 |
+| Stories                                                                     | 17:16   |       |      | 100.0 |
+| Active                                                                      |         | 17:16 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   4.6 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.3 |
+| COMPLETED Implement the context class                                       |         |       | 1:12 |   6.9 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  24.2 |
+| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   9.2 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   1.2 |
-| COMPLETED Implement the output languages transform                          |         |       | 0:37 |   3.7 |
-| COMPLETED Use forward declaration for context                               |         |       | 0:20 |   2.0 |
-| COMPLETED Implement the references chain                                    |         |       | 2:43 |  16.1 |
-| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   4.0 |
+| COMPLETED Implement the output languages transform                          |         |       | 0:37 |   3.6 |
+| COMPLETED Use forward declaration for context                               |         |       | 0:20 |   1.9 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |  15.7 |
+| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   3.9 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   1.3 |
-| COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   4.9 |
-| STARTED Implement the post-processing chain                                 |         |       | 3:07 |  18.5 |
+| COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   4.8 |
+| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  20.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -226,7 +226,9 @@ Tasks:
 - convert models to their final representation.
 - plug it in the model generation chain.
 
-*** STARTED Implement the post-processing chain                       :story:
+*** COMPLETED Implement the post-processing chain                     :story:
+    CLOSED: [2017-07-09 Sun 11:41]
+    CLOCK: [2017-07-09 Sun 11:17]--[2017-07-09 Sun 11:41] =>  0:24
     CLOCK: [2017-07-09 Sun 11:01]--[2017-07-09 Sun 11:16] =>  0:15
     CLOCK: [2017-07-09 Sun 10:45]--[2017-07-09 Sun 11:00] =>  0:15
     CLOCK: [2017-07-08 Sat 22:58]--[2017-07-08 Sat 23:17] =>  0:19
@@ -256,6 +258,20 @@ Notes:
 - for the external chain, we need to generate the decorations
   properties factory within the chain.
 
+*** Move helpers from =transforms= namespace                          :story:
+
+We should try to keep the transforms namespace clean and only have
+transformation related code there. All other code that is not
+meta-model types should go to a generic namespace such as "helpers".
+
+- indexer
+- resolver
+- path extractor
+
+*** Move helpers from main  namespace                                 :story:
+
+Types such as name builder etc need to be moved to the helpers namespace.
+
 *** Replace expanders with transforms                                 :story:
 
 Tasks:
@@ -268,7 +284,7 @@ Tasks:
 
 We did a quick hack and reused the existing mapper. We need to move
 it, and all the associated classes (repository etc) into the
-transforms namespace and clean it up.
+transforms namespace and clean it up. Name: =map_transform=.
 
 *** Remove all legacy classes from yarn                               :story:
 
@@ -414,6 +430,7 @@ for symmetry purposes it would be nice to have some top-level
 namespace for the data types. Names:
 
 - entities
+- meta-model
 - ...
 
 If we cannot find any good names, we may need to leave these objects
