--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,27 +12,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-09 Sun 11:41]
+#+CAPTION: Clock summary at [2017-07-09 Sun 11:48]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *17:16* |       |      | 100.0 |
+| *Total time*                                                                | *17:22* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 17:16   |       |      | 100.0 |
-| Active                                                                      |         | 17:16 |      | 100.0 |
+| Stories                                                                     | 17:22   |       |      | 100.0 |
+| Active                                                                      |         | 17:22 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   4.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.3 |
 | COMPLETED Implement the context class                                       |         |       | 1:12 |   6.9 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  24.2 |
-| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   9.2 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  24.1 |
+| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   9.1 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   1.2 |
 | COMPLETED Implement the output languages transform                          |         |       | 0:37 |   3.6 |
 | COMPLETED Use forward declaration for context                               |         |       | 0:20 |   1.9 |
-| COMPLETED Implement the references chain                                    |         |       | 2:43 |  15.7 |
-| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   3.9 |
-| COMPLETED Implement the model generation chain                              |         |       | 0:13 |   1.3 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |  15.6 |
+| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   3.8 |
+| COMPLETED Implement the model generation chain                              |         |       | 0:13 |   1.2 |
 | COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   4.8 |
-| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  20.4 |
+| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  20.2 |
+| STARTED Move helpers from =transforms= namespace                            |         |       | 0:06 |   0.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -258,12 +259,14 @@ Notes:
 - for the external chain, we need to generate the decorations
   properties factory within the chain.
 
-*** Move helpers from =transforms= namespace                          :story:
+*** STARTED Move helpers from =transforms= namespace                  :story:
+    CLOCK: [2017-07-09 Sun 11:42]--[2017-07-09 Sun 11:48] =>  0:06
 
 We should try to keep the transforms namespace clean and only have
 transformation related code there. All other code that is not
 meta-model types should go to a generic namespace such as "helpers".
 
+- validator
 - indexer
 - resolver
 - path extractor
